--- a/package.json
+++ b/package.json
@@ -3,8 +3,25 @@
   "version": "1.0.0",
   "description": "",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
-    "test": "test"
+    "build": "tsc",
+    "test": "jest --config ./jest.config.js --forceExit tests/"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^17.0.29",
+    "jest": "^27.0.0",
+    "ts-jest": "^27.1.4",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "class-transformer": "^0.5.1",
+    "knex": "^2.0.0",
+    "lodash": "^4.17.21",
+    "reflect-metadata": "^0.1.13"
   },
   "repository": {
     "type": "git",
