--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "jest --config ./jest.config.js --forceExit tests/"
+    "test": "jest --config ./.jest.config.js --forceExit tests/"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
